--- a/index.html
+++ b/index.html
@@ -20,26 +20,47 @@
     </div>
 
     <script>
-        // --- Estado Global ---
-        let state = {
-            view: 'setup', // 'setup', 'match', 'ranking'
-            players: [],
-            newPlayerName: '',
-            playersPerTeam: 5,
-            teamA: [],
-            teamB: [],
-            waitingList: [],
-            scoreA: 0,
-            scoreB: 0,
-            timer: 600,
-            isActive: false,
-            matchCount: 0,
-            showGoalModal: null, // 'A' ou 'B'
-            selectedScorer: null,
-            subModal: null // { team, player, teamName }
-        };
+        // --- Estado Global com Persistência ---
+        const STORAGE_KEY = 'asmeto_players_db';
 
+        function loadInitialState() {
+            const savedPlayers = localStorage.getItem(STORAGE_KEY);
+            return {
+                view: 'setup',
+                players: savedPlayers ? JSON.parse(savedPlayers) : [],
+                newPlayerName: '',
+                playersPerTeam: 5,
+                teamA: [],
+                teamB: [],
+                waitingList: [],
+                scoreA: 0,
+                scoreB: 0,
+                timer: 600,
+                isActive: false,
+                matchCount: 0,
+                showGoalModal: null,
+                selectedScorer: null,
+                subModal: null
+            };
+        }
+
+        let state = loadInitialState();
         let timerInterval = null;
+
+        // --- Funções de Persistência ---
+        function savePlayersToStorage() {
+            // Salvamos apenas os dados base (nome) e zeramos stats se necessário, 
+            // mas aqui salvaremos o estado atual da lista para manter o ranking da noite.
+            localStorage.setItem(STORAGE_KEY, JSON.stringify(state.players));
+        }
+
+        function clearStorage() {
+            if (confirm("Deseja apagar permanentemente todos os atletas e estatísticas salvos?")) {
+                localStorage.removeItem(STORAGE_KEY);
+                state.players = [];
+                render();
+            }
+        }
 
         // --- Lógica de Negócio ---
 
@@ -88,6 +109,7 @@
                 state.waitingList.push(player);
             }
             state.newPlayerName = '';
+            savePlayersToStorage();
             render();
         }
 
@@ -98,11 +120,15 @@
             state.teamA = state.teamA.filter(p => p.id !== id);
             state.teamB = state.teamB.filter(p => p.id !== id);
             state.subModal = null;
+            savePlayersToStorage();
             render();
         }
 
         function startMatch() {
-            if (state.players.length < state.playersPerTeam * 2) return;
+            if (state.players.length < state.playersPerTeam * 2) {
+                alert(`Necessário pelo menos ${state.playersPerTeam * 2} jogadores.`);
+                return;
+            }
             const shuffled = [...state.players].sort(() => Math.random() - 0.5);
             state.teamA = shuffled.slice(0, state.playersPerTeam);
             state.teamB = shuffled.slice(state.playersPerTeam, state.playersPerTeam * 2);
@@ -132,6 +158,7 @@
             state.scoreB = 0;
             state.timer = 600;
             toggleTimer(false);
+            savePlayersToStorage();
             render();
         }
 
@@ -154,9 +181,14 @@
         function renderSetup() {
             return `
                 <div class="space-y-6">
-                    <div class="bg-gradient-to-r from-green-600 to-green-800 p-6 rounded-3xl text-white shadow-lg">
-                        <h2 class="text-2xl font-black-italic tracking-tighter">CONFIGURAÇÃO</h2>
-                        <p class="text-green-100 text-xs font-bold opacity-70 uppercase tracking-widest">Inicie a Pelada</p>
+                    <div class="bg-gradient-to-r from-green-600 to-green-800 p-6 rounded-3xl text-white shadow-lg flex justify-between items-center">
+                        <div>
+                            <h2 class="text-2xl font-black-italic tracking-tighter">CONFIGURAÇÃO</h2>
+                            <p class="text-green-100 text-xs font-bold opacity-70 uppercase tracking-widest">Atletas Salvos: ${state.players.length}</p>
+                        </div>
+                        <button onclick="clearStorage()" class="p-3 bg-white/10 hover:bg-white/20 rounded-2xl transition-colors" title="Limpar tudo">
+                            <i data-lucide="trash-2"></i>
+                        </button>
                     </div>
                     <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100">
                         <div class="flex gap-2 mb-4">
@@ -169,7 +201,7 @@
                         <input type="number" value="${state.playersPerTeam}" onchange="state.playersPerTeam = parseInt(this.value)" class="w-full mt-1 p-3 bg-gray-50 border border-gray-200 rounded-xl font-bold">
                     </div>
                     <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100">
-                        <h3 class="font-bold mb-4 flex items-center gap-2"><i data-lucide="users" class="text-blue-600"></i> Inscritos (${state.players.length})</h3>
+                        <h3 class="font-bold mb-4 flex items-center gap-2"><i data-lucide="users" class="text-blue-600"></i> Atletas Cadastrados (${state.players.length})</h3>
                         <div class="space-y-2 max-h-60 overflow-y-auto">
                             ${state.players.map(p => `
                                 <div class="flex justify-between items-center p-3 bg-gray-50 rounded-xl">
@@ -177,9 +209,11 @@
                                     <button onclick="removePlayer(${p.id})" class="text-red-400"><i data-lucide="trash-2" size="18"></i></button>
                                 </div>
                             `).join('')}
+                            ${state.players.length === 0 ? '<p class="text-center text-gray-400 text-xs py-4">Nenhum atleta salvo.</p>' : ''}
                         </div>
                     </div>
-                    <button onclick="startMatch()" class="w-full bg-green-600 text-white font-black py-5 rounded-2xl shadow-lg uppercase tracking-widest active:scale-95 transition-all">Começar</button>
+                    <button onclick="startMatch()" class="w-full bg-green-600 text-white font-black py-5 rounded-2xl shadow-lg uppercase tracking-widest active:scale-95 transition-all">Sortear e Iniciar</button>
+                    <p class="text-[10px] text-center text-gray-400 font-bold uppercase tracking-widest">Os atletas são salvos automaticamente no seu navegador</p>
                 </div>
             `;
         }
@@ -216,7 +250,7 @@
                     </div>
 
                     <div class="bg-white p-4 rounded-3xl border border-gray-100 flex gap-2 shadow-sm">
-                        <input type="text" placeholder="Novo atrasado? Nome..." oninput="state.newPlayerName = this.value" class="flex-1 p-3 bg-gray-50 border border-gray-100 rounded-xl text-sm outline-none">
+                        <input type="text" placeholder="Nome do atrasado..." oninput="state.newPlayerName = this.value" class="flex-1 p-3 bg-gray-50 border border-gray-100 rounded-xl text-sm outline-none">
                         <button onclick="addPlayer()" class="bg-zinc-800 text-white px-4 rounded-xl"><i data-lucide="user-plus"></i></button>
                     </div>
 
@@ -233,6 +267,7 @@
                                     ${p.name} <button onclick="removePlayer(${p.id})" class="text-red-400">×</button>
                                 </span>
                             `).join('')}
+                            ${state.waitingList.length === 0 ? '<p class="text-amber-600/50 text-[10px] font-bold">Ninguém na espera.</p>' : ''}
                         </div>
                     </div>
                 </div>
@@ -257,7 +292,13 @@
         }
 
         function renderRanking() {
-            const sorted = [...state.players].sort((a,b) => (b.wins/Math.max(b.matches,1)) - (a.wins/Math.max(a.matches,1)));
+            const sorted = [...state.players].sort((a,b) => {
+                const aprA = a.matches > 0 ? (a.wins/a.matches) : 0;
+                const aprB = b.matches > 0 ? (b.wins/b.matches) : 0;
+                if(aprB !== aprA) return aprB - aprA;
+                return b.goals - a.goals;
+            });
+
             return `
                 <div class="space-y-6 pb-20">
                     <div class="flex justify-between items-center bg-white p-4 rounded-2xl shadow-sm">
@@ -272,7 +313,7 @@
                             <tbody class="divide-y divide-zinc-800">
                                 ${sorted.map((p, i) => `
                                     <tr class="hover:bg-zinc-800/50">
-                                        <td class="px-6 py-5 text-center font-black ${i===0?'text-yellow-500':'text-zinc-600'}">#${i+1}</td>
+                                        <td class="px-6 py-5 text-center font-black ${i===0?'text-yellow-500':i===1?'text-zinc-400':i===2?'text-amber-700':'text-zinc-600'}">#${i+1}</td>
                                         <td class="px-6 py-5 font-black uppercase italic">${p.name}</td>
                                         <td class="px-6 py-5 text-center font-black text-green-500">${p.goals}</td>
                                         <td class="px-6 py-5 text-center font-black text-amber-500">${p.wins}</td>
@@ -295,18 +336,19 @@
                 html += `
                     <div class="fixed inset-0 bg-black/90 backdrop-blur-sm z-50 flex items-center justify-center p-4">
                         <div class="bg-white w-full max-w-sm rounded-3xl overflow-hidden shadow-2xl">
-                            <div class="bg-zinc-900 p-6 text-white text-center font-black-italic uppercase">GOL DA ASMETO!</div>
+                            <div class="bg-zinc-900 p-6 text-white text-center font-black-italic uppercase tracking-widest">GOL REGISTRADO!</div>
                             <div class="p-6 space-y-4">
                                 ${!state.selectedScorer ? 
-                                    team.map(p => `<button onclick="state.selectedScorer=${p.id}; render();" class="w-full p-4 bg-gray-50 rounded-2xl font-black uppercase italic text-left flex justify-between">${p.name} <i data-lucide="target" class="text-green-500"></i></button>`).join('') :
+                                    team.map(p => `<button onclick="state.selectedScorer=${p.id}; render();" class="w-full p-4 bg-gray-50 rounded-2xl font-black uppercase italic text-left flex justify-between group hover:bg-green-50 transition-colors">${p.name} <i data-lucide="target" class="text-green-500 group-hover:scale-110"></i></button>`).join('') :
                                     `
-                                    <button onclick="registerGoal(null)" class="w-full p-4 bg-gray-100 rounded-2xl font-black uppercase italic">Sem Assistência</button>
+                                    <p class="text-[10px] font-black text-gray-400 uppercase text-center">Assistência de:</p>
+                                    <button onclick="registerGoal(null)" class="w-full p-4 bg-gray-100 rounded-2xl font-black uppercase italic text-gray-500">Sem Assistência</button>
                                     ${team.filter(p => p.id !== state.selectedScorer).map(p => `
                                         <button onclick="registerGoal(${p.id})" class="w-full p-4 bg-blue-50 text-blue-900 rounded-2xl font-black uppercase italic flex justify-between border border-blue-100">${p.name} <i data-lucide="hand-helping"></i></button>
                                     `).join('')}
                                     `
                                 }
-                                <button onclick="state.showGoalModal=null; state.selectedScorer=null; render();" class="w-full text-gray-400 font-black py-2 uppercase text-xs">Cancelar</button>
+                                <button onclick="state.showGoalModal=null; state.selectedScorer=null; render();" class="w-full text-gray-400 font-black py-2 uppercase text-xs">Voltar</button>
                             </div>
                         </div>
                     </div>
@@ -320,16 +362,16 @@
                     <div class="fixed inset-0 bg-black/80 backdrop-blur-md z-50 flex items-center justify-center p-4">
                         <div class="bg-white w-full max-w-sm rounded-[32px] p-6 shadow-2xl">
                             <div class="flex justify-between items-center mb-6">
-                                <h3 class="text-lg font-black-italic uppercase tracking-tighter">Gestão de Atleta</h3>
+                                <h3 class="text-lg font-black-italic uppercase tracking-tighter">Atleta em Campo</h3>
                                 <button onclick="state.subModal=null; render();" class="p-2 bg-gray-100 rounded-full"><i data-lucide="x" size="18"></i></button>
                             </div>
                             <div class="mb-8 text-center bg-gray-50 p-6 rounded-2xl border border-dashed border-gray-200">
-                                <p class="text-[10px] font-black text-gray-400 uppercase tracking-widest">Selecionado</p>
+                                <p class="text-[10px] font-black text-gray-400 uppercase tracking-widest">Atleta</p>
                                 <p class="text-2xl font-black-italic uppercase text-zinc-800">${player.name}</p>
                             </div>
                             <div class="space-y-3">
-                                <button onclick="executeSub()" class="w-full bg-amber-500 text-white font-black py-4 rounded-2xl flex items-center justify-center gap-3">Substituir</button>
-                                <button onclick="removePlayer(${player.id})" class="w-full bg-red-50 text-red-600 font-black py-4 rounded-2xl flex items-center justify-center gap-3">Excluir</button>
+                                <button onclick="executeSub()" class="w-full bg-amber-500 text-white font-black py-4 rounded-2xl flex items-center justify-center gap-3 active:scale-95 transition-all">Substituir</button>
+                                <button onclick="removePlayer(${player.id})" class="w-full bg-red-50 text-red-600 font-black py-4 rounded-2xl flex items-center justify-center gap-3 active:scale-95 transition-all">Excluir Permanente</button>
                             </div>
                         </div>
                     </div>
@@ -371,6 +413,7 @@
 
             state.showGoalModal = null;
             state.selectedScorer = null;
+            savePlayersToStorage();
             render();
         }
 
@@ -383,7 +426,7 @@
 
         function executeSub() {
             const { team, player, teamName } = state.subModal;
-            if (state.waitingList.length === 0) return alert("Fila de espera vazia!");
+            if (state.waitingList.length === 0) return alert("Ninguém na fila de espera!");
             
             const next = state.waitingList.shift();
             state.waitingList.push(player);
