--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             preview.src = currentCapturedPhoto;
             preview.classList.remove('hidden');
             video.classList.add('hidden');
-            document.getElementById('btn-capture').innerText = "Tentar Novamente";
+            document.getElementById('btn-capture').innerText = "Tirar Novamente";
         }
 
         function registerPlayer() {
